--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
-}
+  "license": "MIT",
+  "dependencies": {
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
